Fix SonarQube findings